--- a/_data/projects/b_45.yml
+++ b/_data/projects/b_45.yml
@@ -3,6 +3,7 @@ thumbnail: "/assets/images/45_degrees/45_degrees_screen_1_thumbnail.webp"
 big-thumbnail: "/assets/images/45_degrees/45_degrees_screen_1_thumbnail.webp"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.webp"
 dedicated-page: 45-degrees
+path: /projects/45-degrees/
 year: 2021
 featured: true
 hidden: false
@@ -14,3 +15,21 @@ badges:
   -
     - GD
     - LD
+background-image: /assets/images/45_degrees/45_degrees_screen_5.webp
+credits: projects/45-degrees/credits.md
+slide-content-list:
+  - "video;https://www.youtube-nocookie.com/embed/tQiUdatfsO0"
+  - "image;/assets/images/45_degrees/45_degrees_screen_1.png"
+  - "image;/assets/images/45_degrees/45_degrees_screen_2.png"
+  - "image;/assets/images/45_degrees/45_degrees_screen_3.png"
+  - "image;/assets/images/45_degrees/45_degrees_screen_5.png"
+thumbnails:
+  - "/assets/images/45_degrees/thumbnail_video.png"
+  - "/assets/images/45_degrees/45_degrees_screen_1.png"
+  - "/assets/images/45_degrees/45_degrees_screen_2.png"
+  - "/assets/images/45_degrees/45_degrees_screen_3.png"
+  - "/assets/images/45_degrees/45_degrees_screen_5.png"
+presentation:
+  - projects/45-degrees/core-intentions.md
+missions:
+  - projects/45-degrees/missions.md
