--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Amaury Butaux 
 email: "amaury.butaux@outlook.fr"
 description: >- # this means to ignore newlines until "baseurl:"
-  Junior Game Designer
+  Game Designer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.amaurybutaux.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ymarua
